--- a/templates/partials/_also_viewed.jade
+++ b/templates/partials/_also_viewed.jade
@@ -8,19 +8,16 @@ section.section.also.also-viewed
           img(src="http://lorempixel.com/100/100/food/", alt="Image1", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 1
-        .product-price
-          p $19.99
+        .product-price $19.99
       li
         a.thumbnail(href="#", target="_blank") 
           img(src="http://lorempixel.com/100/100/food/", alt="Image2", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 2
-        .product-price
-          p $29.99
+        .product-price $29.99
       li
         a.thumbnail(href="#", target="_blank") 
           img(src="http://lorempixel.com/100/100/food/", alt="Image3", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 3 
-        .product-price
-          p $22.99      
+        .product-price $22.99      
