--- a/templates/test_6.jade
+++ b/templates/test_6.jade
@@ -2,7 +2,7 @@ include partials/_doctype.jade
 head
   include partials/_meta.jade
   include partials/_links.jade 
-body(onload="loadData();")
+body
   .col-md-12 
     include partials/_header.jade
   .left-content.col-md-9 
