--- a/templates/partials/_also_bought.jade
+++ b/templates/partials/_also_bought.jade
@@ -8,40 +8,34 @@ section.section.also.also-bought
           img(src="http://lorempixel.com/100/100/food/", alt="Image1", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 1
-        .product-price
-          p $19.99
+        .product-price $19.99
       li
         a.thumbnail(href="#", target="_blank") 
           img(src="http://lorempixel.com/100/100/food/", alt="Image2", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 2
-        .product-price
-          p $29.99
+        .product-price $29.99
       li
         a.thumbnail(href="#", target="_blank") 
           img(src="http://lorempixel.com/100/100/food/", alt="Image3", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 3 
-        .product-price
-          p $22.99      
+        .product-price $22.99      
       li
         a.thumbnail(href="#", target="_blank") 
           img(src="http://lorempixel.com/100/100/food/", alt="Image4", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 4
-        .product-price
-          p $32.99
+        .product-price $32.99
       li
         a.thumbnail(href="#", target="_blank") 
           img(src="http://lorempixel.com/100/100/food/", alt="Image5", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 5
-        .product-price
-          p $15.99
+        .product-price $15.99
       li
         a.thumbnail(href="#", target="_blank") 
           img(src="http://lorempixel.com/100/100/food/", alt="Image6", width="90", height="90")
         a.product-link(href="#", target="_blank")
           span.product-name Product 6 
-        .product-price
-          p $9.99          
+        .product-price $9.99          
